--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en"
 title = "Liberia"
 theme = "ln-base"
 
-disableKinds = ["taxonomy", "taxonomyTerm"]
+disableKinds = ["RSS", "robotsTXT"]
 enableGitInfo = true
 
 [outputs]
@@ -14,3 +14,7 @@ enableGitInfo = true
   site = "Shoogle"
   org = "lokal-ninja"
   repo = "liberia"
+
+[taxonomies]
+  shop = "shops"
+
