--- a/data/cities/gbarnga/john-zazas-business-center.yml
+++ b/data/cities/gbarnga/john-zazas-business-center.yml
@@ -7,5 +7,5 @@ city: Gbarnga
 street: "lofa road"
 housenumber: 
 phone: "0886959303"
-opening_hours: "mo-Fr.7:00-9:00"
+opening_hours: "Mo-Fr 07:00-21:00"
 website: ""
