--- a/data/cities/monrovia/sister-mamie-business-center-un-drive.yml
+++ b/data/cities/monrovia/sister-mamie-business-center-un-drive.yml
@@ -1,10 +1,10 @@
-id: 7205802707
+id: 7212534548
 type: node
-latitude: 6.37403
-longitude: -10.78729
+latitude: 6.374
+longitude: -10.78731
 postcode: ""
 city: Monrovia
-street: ""
+street: "UN Drive"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
