--- a/data/cities/monrovia/tenneh-business-center-un-drive-2.yml
+++ b/data/cities/monrovia/tenneh-business-center-un-drive-2.yml
@@ -1,10 +1,10 @@
-id: 7205802784
+id: 7212534561
 type: node
-latitude: 6.374
-longitude: -10.78729
+latitude: 6.37398
+longitude: -10.78732
 postcode: ""
 city: Monrovia
-street: ""
+street: "UN Drive"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
