update content and data

--- a/data/cities/ganta/with-god-all-things-are-possible.yml
+++ b/data/cities/ganta/with-god-all-things-are-possible.yml
@@ -1,11 +1,11 @@
-id: 4889611431
+id: 5011613374
 type: node
-latitude: 7.23381
-longitude: -8.98516
+latitude: 7.23353
+longitude: -8.98737
 postcode: ""
 city: Ganta
-street: "Ganta Main Street"
+street: ""
 housenumber: 
-phone: "0886589858"
+phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
 website: ""
