update content and data

--- a/data/cities/gbarnga/blacksmith-shop-2.yml
+++ b/data/cities/gbarnga/blacksmith-shop-2.yml
@@ -1,11 +1,11 @@
-id: 5056789740
+id: 5036948091
 type: node
-latitude: 6.99547
-longitude: -9.45045
+latitude: 7.05043
+longitude: -9.43515
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: 
-phone: "0777371774"
-opening_hours: "Mo-Sa 08:00-18:00"
+phone: ""
+opening_hours: ""
 website: ""
