--- a/data/cities/robertsports/in-god-we-trust.yml
+++ b/data/cities/robertsports/in-god-we-trust.yml
@@ -1,9 +1,9 @@
-id: 5029043184
+id: 10706574530
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 6.75476
+longitude: -11.36108
 postcode: ""
-city: Ganta
+city: Robertsports
 street: ""
 housenumber: 
 phone: ""
