--- a/data/cities/robertsports/1000000-business-center.yml
+++ b/data/cities/robertsports/1000000-business-center.yml
@@ -1,9 +1,9 @@
-id: 5029043184
+id: 10706575275
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 6.75711
+longitude: -11.35367
 postcode: ""
-city: Ganta
+city: Robertsports
 street: ""
 housenumber: 
 phone: ""
