--- a/data/cities/robertsports/good-tailor-shop.yml
+++ b/data/cities/robertsports/good-tailor-shop.yml
@@ -1,9 +1,9 @@
-id: 5029043184
+id: 10706575291
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 6.7565
+longitude: -11.35342
 postcode: ""
-city: Ganta
+city: Robertsports
 street: ""
 housenumber: 
 phone: ""
