--- a/data/cities/robertsports/sergio-business-center.yml
+++ b/data/cities/robertsports/sergio-business-center.yml
@@ -1,9 +1,9 @@
-id: 5029043184
+id: 10706575730
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 6.75653
+longitude: -11.37201
 postcode: ""
-city: Ganta
+city: Robertsports
 street: ""
 housenumber: 
 phone: ""
