--- a/data/cities/robertsports/simo-business-center.yml
+++ b/data/cities/robertsports/simo-business-center.yml
@@ -1,9 +1,9 @@
-id: 5029043184
+id: 10706575966
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 6.7576
+longitude: -11.35307
 postcode: ""
-city: Ganta
+city: Robertsports
 street: ""
 housenumber: 
 phone: ""
