--- a/data/cities/robertsports/solo-business-center.yml
+++ b/data/cities/robertsports/solo-business-center.yml
@@ -1,9 +1,9 @@
-id: 5029043184
+id: 10706574643
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 6.75562
+longitude: -11.36146
 postcode: ""
-city: Ganta
+city: Robertsports
 street: ""
 housenumber: 
 phone: ""
