--- a/data/cities/robertsports/tea-shop.yml
+++ b/data/cities/robertsports/tea-shop.yml
@@ -1,9 +1,9 @@
-id: 5029043184
+id: 10706575268
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 6.75709
+longitude: -11.35369
 postcode: ""
-city: Ganta
+city: Robertsports
 street: ""
 housenumber: 
 phone: ""
