--- a/data/cities/robertsports/wood-shop.yml
+++ b/data/cities/robertsports/wood-shop.yml
@@ -1,9 +1,9 @@
-id: 5029043184
+id: 10706574816
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 6.75544
+longitude: -11.36129
 postcode: ""
-city: Ganta
+city: Robertsports
 street: ""
 housenumber: 
 phone: ""
