update content and data

--- a/data/cities/gbarnga/tea-shop.yml
+++ b/data/cities/gbarnga/tea-shop.yml
@@ -1,11 +1,11 @@
-id: 5031473931
+id: 5034386164
 type: node
-latitude: 7.00894
-longitude: -9.47937
+latitude: 6.9993
+longitude: -9.47287
 postcode: ""
 city: Gbarnga
-street: "Lofa road"
+street: ""
 housenumber: 
-phone: "0886857930"
-opening_hours: "Mo-Sa 08:00-18:00"
+phone: ""
+opening_hours: ""
 website: ""
