--- a/data/cities/zwedru/favor-business-center.yml
+++ b/data/cities/zwedru/favor-business-center.yml
@@ -1,11 +1,11 @@
-id: 5077630347
+id: 4841781485
 type: node
-latitude: 6.06292
-longitude: -8.14235
+latitude: 6.06314
+longitude: -8.1424
 postcode: ""
 city: Zwedru
 street: "Kudah Bypass"
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "0886694958/0770308431"
+opening_hours: "Mo-Sa 08:00-18:00"
 website: ""
