--- a/data/cities/ganta/charging-booth-3.yml
+++ b/data/cities/ganta/charging-booth-3.yml
@@ -1,11 +1,11 @@
-id: 5029043184
+id: 5098557767
 type: node
-latitude: 7.23282
-longitude: -9.00283
+latitude: 7.22824
+longitude: -9.0019
 postcode: ""
 city: Ganta
 street: ""
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
