--- a/data/cities/zwedru/mamadou-alpha-diallo-business-center.yml
+++ b/data/cities/zwedru/mamadou-alpha-diallo-business-center.yml
@@ -1,11 +1,11 @@
-id: 4845930608
+id: 4845931151
 type: node
-latitude: 6.06879
-longitude: -8.13132
+latitude: 6.07094
+longitude: -8.13324
 postcode: ""
 city: Zwedru
-street: "Dehsuah Street"
+street: "Moses P. Harris Street"
 housenumber: 
-phone: "0886571787"
-opening_hours: ""
+phone: "0886465460"
+opening_hours: "Mo-Sa 08:00-18:00"
 website: ""
