--- a/data/cities/zwedru/mbbf-brother-business-center.yml
+++ b/data/cities/zwedru/mbbf-brother-business-center.yml
@@ -1,11 +1,11 @@
-id: 4845930573
+id: 4843949488
 type: node
-latitude: 6.06869
-longitude: -8.13245
+latitude: 6.06651
+longitude: -8.13406
 postcode: ""
 city: Zwedru
-street: "Dehsuah Street"
-housenumber: 
-phone: "0886001801"
+street: "Doe Street"
+housenumber: 0886001801
+phone: ""
 opening_hours: ""
 website: ""
