update content and data

--- a/data/cities/zwedru/fode-cisse-business-center-dehsuah-street.yml
+++ b/data/cities/zwedru/fode-cisse-business-center-dehsuah-street.yml
@@ -1,11 +1,11 @@
-id: 4845930738
+id: 4845930721
 type: node
 latitude: 6.06869
-longitude: -8.13265
+longitude: -8.1324
 postcode: ""
 city: Zwedru
 street: "Dehsuah Street"
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "0888179750"
+opening_hours: "Mo-Sa 09:00-17:00"
 website: ""
