--- a/data/cities/zwedru/fode-cisse-business-center.yml
+++ b/data/cities/zwedru/fode-cisse-business-center.yml
@@ -1,11 +1,11 @@
-id: 4845930721
+id: 4845930738
 type: node
 latitude: 6.06869
-longitude: -8.1324
+longitude: -8.13265
 postcode: ""
 city: Zwedru
 street: "Dehsuah Street"
 housenumber: 
-phone: "0888179750"
-opening_hours: "Mo-Sa 09:00-17:00"
+phone: ""
+opening_hours: ""
 website: ""
