--- a/data/cities/zwedru/alpha-o-diallo-shop-1-dehsuah-street-2.yml
+++ b/data/cities/zwedru/alpha-o-diallo-shop-1-dehsuah-street-2.yml
@@ -1,11 +1,11 @@
-id: 4847370273
+id: 4845930724
 type: node
-latitude: 6.06853
-longitude: -8.13207
+latitude: 6.06872
+longitude: -8.13182
 postcode: ""
 city: Zwedru
 street: "Dehsuah Street"
 housenumber: 
-phone: "0886484924"
+phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
 website: ""
