--- a/data/cities/zwedru/abdoulaye-barry-corporation.yml
+++ b/data/cities/zwedru/abdoulaye-barry-corporation.yml
@@ -1,11 +1,11 @@
-id: 4845930579
+id: 4893639776
 type: node
-latitude: 6.06865
-longitude: -8.13309
+latitude: 6.06857
+longitude: -8.13156
 postcode: ""
 city: Zwedru
 street: "Dehsuah Street"
 housenumber: 
-phone: ""
+phone: "0886452521"
 opening_hours: "Mo-Sa 08:00-18:00"
 website: ""
