update content and data

--- a/data/cities/ganta/histine-flomo-charging-booth-gbluyee-mean-street.yml
+++ b/data/cities/ganta/histine-flomo-charging-booth-gbluyee-mean-street.yml
@@ -1,10 +1,10 @@
-id: 4893342652
+id: 5039874269
 type: node
-latitude: 7.21782
-longitude: -8.97635
+latitude: 7.23171
+longitude: -8.99977
 postcode: ""
 city: Ganta
-street: ""
+street: "Gbluyee mean street"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
