--- a/data/cities/gbarnga/tea-shop.yml
+++ b/data/cities/gbarnga/tea-shop.yml
@@ -1,11 +1,11 @@
-id: 5034386164
+id: 5031473931
 type: node
-latitude: 6.9993
-longitude: -9.47287
+latitude: 7.00894
+longitude: -9.47937
 postcode: ""
 city: Gbarnga
-street: ""
+street: "Lofa road"
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "0886857930"
+opening_hours: "Mo-Sa 08:00-18:00"
 website: ""
