--- a/data/cities/gbarnga/b-k-business-center.yml
+++ b/data/cities/gbarnga/b-k-business-center.yml
@@ -1,11 +1,11 @@
-id: 5034386201
+id: 5034386279
 type: node
-latitude: 6.99894
-longitude: -9.47262
+latitude: 6.99927
+longitude: -9.47296
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "0886987114"
+opening_hours: "Mo-Sa 08:00-18:00"
 website: ""
