--- a/data/cities/gbarnga/tea-shop-2.yml
+++ b/data/cities/gbarnga/tea-shop-2.yml
@@ -1,9 +1,9 @@
-id: 5029045557
+id: 5034386164
 type: node
-latitude: 7.23138
-longitude: -8.99994
+latitude: 6.9993
+longitude: -9.47287
 postcode: ""
-city: Ganta
+city: Gbarnga
 street: ""
 housenumber: 
 phone: ""
