--- a/data/cities/monrovia/jbq-business-center.yml
+++ b/data/cities/monrovia/jbq-business-center.yml
@@ -1,10 +1,10 @@
-id: 7205802200
+id: 7205801818
 type: node
-latitude: 6.37228
+latitude: 6.37226
 longitude: -10.78761
 postcode: ""
 city: Monrovia
-street: "UN Drive"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
