update content and data

--- a/data/cities/monrovia/freedom-business-center.yml
+++ b/data/cities/monrovia/freedom-business-center.yml
@@ -1,10 +1,10 @@
-id: 7205802611
+id: 7205802742
 type: node
-latitude: 6.37237
-longitude: -10.78809
+latitude: 6.37255
+longitude: -10.78799
 postcode: ""
 city: Monrovia
-street: ""
+street: "UN Drive"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
