--- a/data/cities/monrovia/freedom-business-center-2.yml
+++ b/data/cities/monrovia/freedom-business-center-2.yml
@@ -1,10 +1,10 @@
-id: 7205802742
+id: 7205802611
 type: node
-latitude: 6.37255
-longitude: -10.78799
+latitude: 6.37237
+longitude: -10.78809
 postcode: ""
 city: Monrovia
-street: "UN Drive"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
