update content and data

--- a/data/cities/jendema/abdulai-bah.yml
+++ b/data/cities/jendema/abdulai-bah.yml
@@ -2,7 +2,7 @@ id: 4526409681
 type: node
 latitude: 7.02014
 longitude: -11.38245
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
