--- a/data/cities/jendema/alhaji-shor.yml
+++ b/data/cities/jendema/alhaji-shor.yml
@@ -2,7 +2,7 @@ id: 4526409677
 type: node
 latitude: 7.01998
 longitude: -11.38235
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
