--- a/data/cities/jendema/comfort.yml
+++ b/data/cities/jendema/comfort.yml
@@ -2,7 +2,7 @@ id: 4526409678
 type: node
 latitude: 7.01984
 longitude: -11.38228
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
