--- a/data/cities/jendema/ibrahim-barries-provisions-shop.yml
+++ b/data/cities/jendema/ibrahim-barries-provisions-shop.yml
@@ -2,7 +2,7 @@ id: 4526409676
 type: node
 latitude: 7.02005
 longitude: -11.38256
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
