--- a/data/cities/jendema/ibrahim-mansaray.yml
+++ b/data/cities/jendema/ibrahim-mansaray.yml
@@ -2,7 +2,7 @@ id: 4526409684
 type: node
 latitude: 7.01978
 longitude: -11.38225
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
