--- a/data/cities/jendema/junisa-changing-center.yml
+++ b/data/cities/jendema/junisa-changing-center.yml
@@ -2,7 +2,7 @@ id: 4509027344
 type: node
 latitude: 7.01867
 longitude: -11.38192
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Liberia Highway"
 housenumber: 
