--- a/data/cities/jendema/krios.yml
+++ b/data/cities/jendema/krios.yml
@@ -2,7 +2,7 @@ id: 4509027345
 type: node
 latitude: 7.0186
 longitude: -11.38169
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "main Jendema Road"
 housenumber: 
