--- a/data/cities/jendema/kris-tv.yml
+++ b/data/cities/jendema/kris-tv.yml
@@ -2,7 +2,7 @@ id: 454308293
 type: way
 latitude: 7.019
 longitude: -11.38175
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Trans-West African Coastal Highway"
 housenumber: Kallia Road
