--- a/data/cities/jendema/long-road-poyo-bar.yml
+++ b/data/cities/jendema/long-road-poyo-bar.yml
@@ -2,7 +2,7 @@ id: 4509027342
 type: node
 latitude: 7.02319
 longitude: -11.38708
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Off Liberia Highway"
 housenumber: 
