--- a/data/cities/jendema/mr-bah.yml
+++ b/data/cities/jendema/mr-bah.yml
@@ -2,7 +2,7 @@ id: 4526409688
 type: node
 latitude: 7.01905
 longitude: -11.38179
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
