--- a/data/cities/jendema/senesie-rogers.yml
+++ b/data/cities/jendema/senesie-rogers.yml
@@ -2,7 +2,7 @@ id: 4526409679
 type: node
 latitude: 7.02011
 longitude: -11.38242
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
