--- a/data/cities/jendema/sheku-dabeni.yml
+++ b/data/cities/jendema/sheku-dabeni.yml
@@ -2,7 +2,7 @@ id: 4526409683
 type: node
 latitude: 7.01993
 longitude: -11.38232
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
