--- a/data/cities/jendema/abdulai-jallon.yml
+++ b/data/cities/jendema/abdulai-jallon.yml
@@ -2,7 +2,7 @@ id: 4526409682
 type: node
 latitude: 7.0202
 longitude: -11.38247
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
