--- a/data/cities/jendema/foday-kromah.yml
+++ b/data/cities/jendema/foday-kromah.yml
@@ -2,7 +2,7 @@ id: 4526409680
 type: node
 latitude: 7.02003
 longitude: -11.38237
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
