--- a/data/cities/jendema/gibo-international-boutique.yml
+++ b/data/cities/jendema/gibo-international-boutique.yml
@@ -2,7 +2,7 @@ id: 4526409685
 type: node
 latitude: 7.01942
 longitude: -11.38225
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Liberia Highway"
 housenumber: 
