--- a/data/cities/jendema/honda-spare-part-shop.yml
+++ b/data/cities/jendema/honda-spare-part-shop.yml
@@ -2,7 +2,7 @@ id: 454308298
 type: way
 latitude: 7.01821
 longitude: -11.3813
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Trans-West African Coastal Highway"
 housenumber: Bosualla
