--- a/data/cities/jendema/junior-bah.yml
+++ b/data/cities/jendema/junior-bah.yml
@@ -2,7 +2,7 @@ id: 4526409687
 type: node
 latitude: 7.0191
 longitude: -11.38184
-postcode: "232"
+postcode: ""
 city: Jendema
 street: "Bo Waterside Road"
 housenumber: 
