update content and data

--- a/data/cities/ganta/with-god-all-things-are-possible-2.yml
+++ b/data/cities/ganta/with-god-all-things-are-possible-2.yml
@@ -1,9 +1,9 @@
-id: 7209625271
+id: 5011613374
 type: node
-latitude: 6.37122
-longitude: -10.78838
+latitude: 7.23353
+longitude: -8.98737
 postcode: ""
-city: Monrovia
+city: Ganta
 street: ""
 housenumber: 
 phone: ""
