--- a/data/cities/monrovia/e-m-business-center-2.yml
+++ b/data/cities/monrovia/e-m-business-center-2.yml
@@ -1,10 +1,10 @@
-id: 7209625197
+id: 7209625271
 type: node
-latitude: 6.3712
-longitude: -10.78845
+latitude: 6.37122
+longitude: -10.78838
 postcode: ""
 city: Monrovia
-street: "UN Drive"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
