--- a/data/cities/monrovia/e-m-business-center.yml
+++ b/data/cities/monrovia/e-m-business-center.yml
@@ -1,10 +1,10 @@
-id: 7209625271
+id: 7209625197
 type: node
-latitude: 6.37122
-longitude: -10.78838
+latitude: 6.3712
+longitude: -10.78845
 postcode: ""
 city: Monrovia
-street: ""
+street: "UN Drive"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
