update content and data

--- a/data/cities/gbarnga/god-mercy-business-center-monrovia-road.yml
+++ b/data/cities/gbarnga/god-mercy-business-center-monrovia-road.yml
@@ -1,11 +1,11 @@
-id: 5056789740
+id: 5106248168
 type: node
-latitude: 6.99547
-longitude: -9.45045
+latitude: 7.00443
+longitude: -9.47786
 postcode: ""
 city: Gbarnga
-street: ""
+street: "Monrovia Road"
 housenumber: 
-phone: "0777371774"
+phone: "0880596364"
 opening_hours: "Mo-Sa 08:00-18:00"
 website: ""
