--- a/data/cities/gbarnga/god-mercy-business-center.yml
+++ b/data/cities/gbarnga/god-mercy-business-center.yml
@@ -1,11 +1,11 @@
-id: 5106248168
+id: 5041948905
 type: node
-latitude: 7.00443
-longitude: -9.47786
+latitude: 6.99541
+longitude: -9.47085
 postcode: ""
 city: Gbarnga
-street: "Monrovia Road"
+street: ""
 housenumber: 
-phone: "0880596364"
-opening_hours: "Mo-Sa 08:00-18:00"
+phone: "0880428699"
+opening_hours: "Mo-Sa 09:00-17:00"
 website: ""
