update content and data

--- a/data/cities/ganta/alie-frozen-food-center.yml
+++ b/data/cities/ganta/alie-frozen-food-center.yml
@@ -1,7 +1,7 @@
-id: 5025065058
-type: node
-latitude: 7.23308
-longitude: -8.98411
+id: 485119873
+type: way
+latitude: 7.23316
+longitude: -8.98413
 postcode: ""
 city: Ganta
 street: ""
