--- a/data/cities/ganta/charging-booth-4.yml
+++ b/data/cities/ganta/charging-booth-4.yml
@@ -1,11 +1,11 @@
-id: 5024769150
+id: 5098557767
 type: node
-latitude: 7.20386
-longitude: -8.97414
+latitude: 7.22824
+longitude: -9.0019
 postcode: ""
 city: Ganta
 street: ""
 housenumber: 
 phone: ""
-opening_hours: "Mo-Sa 08:00-18:00"
+opening_hours: "24/7"
 website: ""
