--- a/data/cities/monrovia/tenneh-business-center-2.yml
+++ b/data/cities/monrovia/tenneh-business-center-2.yml
@@ -1,9 +1,9 @@
-id: 5011613374
+id: 7205802798
 type: node
-latitude: 7.23353
-longitude: -8.98737
+latitude: 6.37395
+longitude: -10.78731
 postcode: ""
-city: Ganta
+city: Monrovia
 street: ""
 housenumber: 
 phone: ""
