--- a/data/cities/ganta/with-god-all-things-are-possible-2.yml
+++ b/data/cities/ganta/with-god-all-things-are-possible-2.yml
@@ -1,10 +1,10 @@
-id: 4845930724
+id: 5011613374
 type: node
-latitude: 6.06872
-longitude: -8.13182
+latitude: 7.23353
+longitude: -8.98737
 postcode: ""
-city: Zwedru
-street: "Dehsuah Street"
+city: Ganta
+street: ""
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 08:00-18:00"
