--- a/data/cities/monrovia/satcon.yml
+++ b/data/cities/monrovia/satcon.yml
@@ -1,10 +1,10 @@
-id: 7205801558
+id: 7205801690
 type: node
-latitude: 6.36571
-longitude: -10.78725
+latitude: 6.36564
+longitude: -10.78728
 postcode: ""
 city: Monrovia
-street: UN Drive
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
