--- a/data/cities/monrovia/united-brothers-rattan-chair-shop-caldwell-junction-duala.yml
+++ b/data/cities/monrovia/united-brothers-rattan-chair-shop-caldwell-junction-duala.yml
@@ -1,10 +1,10 @@
-id: 7205801690
+id: 7205801610
 type: node
-latitude: 6.36564
-longitude: -10.78728
+latitude: 6.36718
+longitude: -10.78795
 postcode: ""
 city: Monrovia
-street: ""
+street: Caldwell Junction, Duala
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
