--- a/data/cities/monrovia/united-brothers-rattan-chair-shop.yml
+++ b/data/cities/monrovia/united-brothers-rattan-chair-shop.yml
@@ -1,10 +1,10 @@
-id: 7205801610
+id: 7205801642
 type: node
-latitude: 6.36718
-longitude: -10.78795
+latitude: 6.36711
+longitude: -10.78794
 postcode: ""
 city: Monrovia
-street: Caldwell Junction, Duala
+street: UN Drive
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
