--- a/data/cities/monrovia/satcon-2.yml
+++ b/data/cities/monrovia/satcon-2.yml
@@ -1,10 +1,10 @@
-id: 7205801610
+id: 7205801690
 type: node
-latitude: 6.36718
-longitude: -10.78795
+latitude: 6.36564
+longitude: -10.78728
 postcode: ""
 city: Monrovia
-street: Caldwell Junction, Duala
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
