--- a/data/cities/monrovia/satcon.yml
+++ b/data/cities/monrovia/satcon.yml
@@ -1,10 +1,10 @@
-id: 7205801690
+id: 7205801558
 type: node
-latitude: 6.36564
-longitude: -10.78728
+latitude: 6.36571
+longitude: -10.78725
 postcode: ""
 city: Monrovia
-street: ""
+street: UN Drive
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
