--- a/data/cities/monrovia/jft-business-shop-un-drive.yml
+++ b/data/cities/monrovia/jft-business-shop-un-drive.yml
@@ -1,10 +1,10 @@
-id: 7205801845
+id: 7205801894
 type: node
-latitude: 6.37187
-longitude: -10.78784
+latitude: 6.37167
+longitude: -10.7879
 postcode: ""
 city: Monrovia
-street: ""
+street: UN Drive
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
