--- a/data/cities/monrovia/jft-business-shop.yml
+++ b/data/cities/monrovia/jft-business-shop.yml
@@ -1,10 +1,10 @@
-id: 7205801894
+id: 7205801845
 type: node
-latitude: 6.37167
-longitude: -10.7879
+latitude: 6.37187
+longitude: -10.78784
 postcode: ""
 city: Monrovia
-street: UN Drive
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
