--- a/data/cities/monrovia/west-africa-enterprise-inc-2.yml
+++ b/data/cities/monrovia/west-africa-enterprise-inc-2.yml
@@ -1,10 +1,10 @@
-id: 7205802015
+id: 7205801895
 type: node
-latitude: 6.37225
-longitude: -10.78761
+latitude: 6.37229
+longitude: -10.7876
 postcode: ""
 city: Monrovia
-street: UN Drive
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
