--- a/data/cities/monrovia/west-africa-enterprise-inc.yml
+++ b/data/cities/monrovia/west-africa-enterprise-inc.yml
@@ -1,10 +1,10 @@
-id: 7205801895
+id: 7205802015
 type: node
-latitude: 6.37229
-longitude: -10.7876
+latitude: 6.37225
+longitude: -10.78761
 postcode: ""
 city: Monrovia
-street: ""
+street: UN Drive
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
