update content and data

--- a/data/cities/ganta/charging-booth-3.yml
+++ b/data/cities/ganta/charging-booth-3.yml
@@ -1,11 +1,11 @@
-id: 5098557767
+id: 5093266336
 type: node
-latitude: 7.22824
-longitude: -9.0019
+latitude: 7.22981
+longitude: -8.98959
 postcode: ""
 city: Ganta
 street: ""
 housenumber: ""
 phone: ""
-opening_hours: 24/7
+opening_hours: Mo-Sa 08:00-18:00
 website: ""
