--- a/data/cities/ganta/charging-booth-paye-goblee-street.yml
+++ b/data/cities/ganta/charging-booth-paye-goblee-street.yml
@@ -1,10 +1,10 @@
-id: 5098557767
+id: 5025403890
 type: node
-latitude: 7.22824
-longitude: -9.0019
+latitude: 7.22628
+longitude: -8.99856
 postcode: ""
 city: Ganta
-street: ""
+street: Paye Goblee Street
 housenumber: ""
 phone: ""
 opening_hours: 24/7
