--- a/data/cities/ganta/histine-flomo-charging-booth-gbluyee-mean-street.yml
+++ b/data/cities/ganta/histine-flomo-charging-booth-gbluyee-mean-street.yml
@@ -1,10 +1,10 @@
-id: 7205801895
+id: 5039874269
 type: node
-latitude: 6.37229
-longitude: -10.7876
+latitude: 7.23171
+longitude: -8.99977
 postcode: ""
-city: Monrovia
-street: ""
+city: Ganta
+street: Gbluyee mean street
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
