--- a/data/cities/ganta/charging-booth.yml
+++ b/data/cities/ganta/charging-booth.yml
@@ -1,11 +1,11 @@
-id: 5025403890
+id: 5029043184
 type: node
-latitude: 7.22628
-longitude: -8.99856
+latitude: 7.23282
+longitude: -9.00283
 postcode: ""
 city: Ganta
-street: Paye Goblee Street
+street: ""
 housenumber: ""
 phone: ""
-opening_hours: 24/7
+opening_hours: ""
 website: ""
