--- a/data/cities/ganta/electronic-shop.yml
+++ b/data/cities/ganta/electronic-shop.yml
@@ -1,10 +1,10 @@
-id: 5035038180
+id: 5034742543
 type: node
-latitude: 7.23291
-longitude: -8.98621
+latitude: 7.23191
+longitude: -8.99007
 postcode: ""
 city: Ganta
-street: Harley Street
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
