--- a/data/cities/gbarnga/community-shop-2.yml
+++ b/data/cities/gbarnga/community-shop-2.yml
@@ -1,11 +1,11 @@
-id: 5038066349
+id: 5035704290
 type: node
-latitude: 6.94949
-longitude: -9.44633
+latitude: 6.99983
+longitude: -9.47579
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: ""
 phone: ""
-opening_hours: 24/7
+opening_hours: Mo-Fr 09:00-17:00
 website: ""
