--- a/data/cities/monrovia/jbq-business-center-un-drive.yml
+++ b/data/cities/monrovia/jbq-business-center-un-drive.yml
@@ -1,10 +1,10 @@
-id: 7205801818
+id: 7205802200
 type: node
-latitude: 6.37226
+latitude: 6.37228
 longitude: -10.78761
 postcode: ""
 city: Monrovia
-street: ""
+street: UN Drive
 housenumber: ""
 phone: ""
 opening_hours: ""
