--- a/data/cities/monrovia/west-africa-enterprise-inc-un-drive.yml
+++ b/data/cities/monrovia/west-africa-enterprise-inc-un-drive.yml
@@ -1,11 +1,11 @@
-id: 7205801818
+id: 7205802015
 type: node
-latitude: 6.37226
+latitude: 6.37225
 longitude: -10.78761
 postcode: ""
 city: Monrovia
-street: ""
+street: UN Drive
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 08:00-18:00
 website: ""
