update content and data

--- a/data/cities/ganta/charging-booth-5.yml
+++ b/data/cities/ganta/charging-booth-5.yml
@@ -1,10 +1,10 @@
-id: 5039874269
+id: 5024769150
 type: node
-latitude: 7.23171
-longitude: -8.99977
+latitude: 7.20386
+longitude: -8.97414
 postcode: ""
 city: Ganta
-street: Gbluyee mean street
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
