--- a/data/cities/ganta/histine-flomo-charging-booth-2.yml
+++ b/data/cities/ganta/histine-flomo-charging-booth-2.yml
@@ -1,9 +1,9 @@
-id: 5034386164
+id: 5029045557
 type: node
-latitude: 6.9993
-longitude: -9.47287
+latitude: 7.23138
+longitude: -8.99994
 postcode: ""
-city: Gbarnga
+city: Ganta
 street: ""
 housenumber: ""
 phone: ""
