--- a/data/cities/ganta/histine-flomo-charging-booth.yml
+++ b/data/cities/ganta/histine-flomo-charging-booth.yml
@@ -1,11 +1,11 @@
-id: 5029045557
+id: 5039874269
 type: node
-latitude: 7.23138
-longitude: -8.99994
+latitude: 7.23175
+longitude: -8.99976
 postcode: ""
 city: Ganta
-street: ""
+street: Gbluyee mean street
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 08:00-18:00
 website: ""
