--- a/data/cities/gbarnga/god-mercy-business-center-monrovia-road.yml
+++ b/data/cities/gbarnga/god-mercy-business-center-monrovia-road.yml
@@ -1,11 +1,11 @@
-id: 5037211568
+id: 5106248168
 type: node
-latitude: 6.99854
-longitude: -9.47308
+latitude: 7.00443
+longitude: -9.47786
 postcode: ""
 city: Gbarnga
-street: Broad Street
+street: Monrovia Road
 housenumber: ""
-phone: ""
+phone: "0880596364"
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
