--- a/data/cities/gbarnga/tea-shop-lofa-road.yml
+++ b/data/cities/gbarnga/tea-shop-lofa-road.yml
@@ -1,11 +1,11 @@
-id: 5037211568
+id: 5031473931
 type: node
-latitude: 6.99854
-longitude: -9.47308
+latitude: 7.00894
+longitude: -9.47937
 postcode: ""
 city: Gbarnga
-street: Broad Street
+street: Lofa road
 housenumber: ""
-phone: ""
+phone: "0886857930"
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
