--- a/data/cities/zwedru/favor-business-center-kudah-bypass.yml
+++ b/data/cities/zwedru/favor-business-center-kudah-bypass.yml
@@ -1,11 +1,11 @@
-id: 4841781485
+id: 5077630347
 type: node
-latitude: 6.06314
-longitude: -8.1424
+latitude: 6.06292
+longitude: -8.14235
 postcode: ""
 city: Zwedru
 street: Kudah Bypass
 housenumber: ""
-phone: 0886694958/0770308431
-opening_hours: Mo-Sa 08:00-18:00
+phone: ""
+opening_hours: ""
 website: ""
