update content and data

--- a/data/cities/ganta/electronic-shop-harley-street-2.yml
+++ b/data/cities/ganta/electronic-shop-harley-street-2.yml
@@ -1,11 +1,11 @@
-id: 5011612056
+id: 5035038180
 type: node
-latitude: 7.23432
-longitude: -8.98827
+latitude: 7.23291
+longitude: -8.98621
 postcode: ""
 city: Ganta
-street: ""
+street: Harley Street
 housenumber: ""
-phone: "0880917677"
+phone: ""
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
