--- a/data/cities/ganta/meinleh-provision-shop.yml
+++ b/data/cities/ganta/meinleh-provision-shop.yml
@@ -4,7 +4,7 @@ latitude: 7.20313
 longitude: -8.97608
 postcode: ""
 city: Ganta
-street: Ganta-Tappita Highway
+street: ""
 housenumber: ""
 phone: "0886407147"
 opening_hours: Mo-Sa 08:00-18:00
