--- a/data/cities/ganta/outside-child-business-center.yml
+++ b/data/cities/ganta/outside-child-business-center.yml
@@ -4,7 +4,7 @@ latitude: 7.2069
 longitude: -8.97937
 postcode: ""
 city: Ganta
-street: LPMC Bypass
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
