--- a/data/cities/gbarnga/tea-shop-2.yml
+++ b/data/cities/gbarnga/tea-shop-2.yml
@@ -1,9 +1,9 @@
-id: 5093175026
+id: 5034386164
 type: node
-latitude: 7.22737
-longitude: -8.97896
+latitude: 6.9993
+longitude: -9.47287
 postcode: ""
-city: Ganta
+city: Gbarnga
 street: ""
 housenumber: ""
 phone: ""
