update content and data

--- a/data/cities/ganta/histine-flomo-charging-booth-gbluyee-mean-street.yml
+++ b/data/cities/ganta/histine-flomo-charging-booth-gbluyee-mean-street.yml
@@ -1,10 +1,10 @@
-id: 5033313774
+id: 5039874269
 type: node
-latitude: 6.99409
-longitude: -9.4633
+latitude: 7.23175
+longitude: -8.99976
 postcode: ""
-city: Gbarnga
-street: ""
+city: Ganta
+street: Gbluyee mean street
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
