--- a/data/cities/ganta/with-god-all-things-are-possible-2.yml
+++ b/data/cities/ganta/with-god-all-things-are-possible-2.yml
@@ -1,11 +1,11 @@
-id: 5034386245
+id: 5011613374
 type: node
-latitude: 6.99687
-longitude: -9.46811
+latitude: 7.23353
+longitude: -8.98737
 postcode: ""
-city: Gbarnga
+city: Ganta
 street: ""
 housenumber: ""
-phone: "0777392554"
+phone: ""
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
