--- a/data/cities/gbarnga/ma-korpo-business-center-2.yml
+++ b/data/cities/gbarnga/ma-korpo-business-center-2.yml
@@ -1,11 +1,11 @@
-id: 5034386168
+id: 5034311590
 type: node
-latitude: 6.99928
-longitude: -9.47323
+latitude: 7.00268
+longitude: -9.4611
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: ""
-phone: "0886999415"
-opening_hours: Mo-Sa 09:00-17:00
+phone: ""
+opening_hours: ""
 website: ""
