--- a/data/cities/gbarnga/tea-shop-lofa-road.yml
+++ b/data/cities/gbarnga/tea-shop-lofa-road.yml
@@ -1,11 +1,11 @@
-id: 5106248168
+id: 5031473931
 type: node
-latitude: 7.00443
-longitude: -9.47786
+latitude: 7.00894
+longitude: -9.47937
 postcode: ""
 city: Gbarnga
-street: Monrovia Road
+street: Lofa road
 housenumber: ""
-phone: "0880596364"
+phone: "0886857930"
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
