--- a/data/cities/ganta/charging-booth.yml
+++ b/data/cities/ganta/charging-booth.yml
@@ -1,11 +1,11 @@
-id: 5093266336
+id: 5029043184
 type: node
-latitude: 7.22981
-longitude: -8.98959
+latitude: 7.23286
+longitude: -9.00282
 postcode: ""
 city: Ganta
 street: ""
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 08:00-18:00
+opening_hours: ""
 website: ""
