--- a/data/cities/ganta/with-god-all-things-are-possible.yml
+++ b/data/cities/ganta/with-god-all-things-are-possible.yml
@@ -1,11 +1,11 @@
-id: 5011613374
+id: 4889611431
 type: node
-latitude: 7.23353
-longitude: -8.98737
+latitude: 7.23381
+longitude: -8.98516
 postcode: ""
 city: Ganta
-street: ""
+street: Ganta Main Street
 housenumber: ""
-phone: ""
+phone: "0886589858"
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
