--- a/data/cities/gbarnga/god-mercy-business-center-2.yml
+++ b/data/cities/gbarnga/god-mercy-business-center-2.yml
@@ -1,11 +1,11 @@
-id: 5033313671
+id: 5041948905
 type: node
-latitude: 6.99413
-longitude: -9.46279
+latitude: 6.99541
+longitude: -9.47085
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: ""
-phone: ""
+phone: "0880428699"
 opening_hours: Mo-Sa 09:00-17:00
 website: ""
