--- a/data/cities/gbarnga/god-mercy-business-center-monrovia-road.yml
+++ b/data/cities/gbarnga/god-mercy-business-center-monrovia-road.yml
@@ -1,11 +1,11 @@
-id: 5031473931
+id: 5106248168
 type: node
-latitude: 7.00894
-longitude: -9.47937
+latitude: 7.00443
+longitude: -9.47786
 postcode: ""
 city: Gbarnga
-street: Lofa road
+street: Monrovia Road
 housenumber: ""
-phone: "0886857930"
+phone: "0880596364"
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
