--- a/data/cities/zwedru/abdoulaye-barry-corporation-dehsuah-street.yml
+++ b/data/cities/zwedru/abdoulaye-barry-corporation-dehsuah-street.yml
@@ -1,11 +1,11 @@
-id: 4893639776
+id: 4845930579
 type: node
-latitude: 6.06857
-longitude: -8.13156
+latitude: 6.06865
+longitude: -8.13309
 postcode: ""
 city: Zwedru
 street: Dehsuah Street
 housenumber: ""
-phone: "0886452521"
+phone: ""
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
