--- a/data/cities/gbarnga/b-k-business-center-2.yml
+++ b/data/cities/gbarnga/b-k-business-center-2.yml
@@ -1,11 +1,11 @@
-id: 5034386279
+id: 5034386201
 type: node
-latitude: 6.99927
-longitude: -9.47296
+latitude: 6.99894
+longitude: -9.47262
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: ""
-phone: "0886987114"
-opening_hours: Mo-Sa 08:00-18:00
+phone: ""
+opening_hours: ""
 website: ""
