--- a/data/cities/gbarnga/b-k-business-center.yml
+++ b/data/cities/gbarnga/b-k-business-center.yml
@@ -1,11 +1,11 @@
-id: 5034386201
+id: 5054040088
 type: node
-latitude: 6.99894
-longitude: -9.47262
+latitude: 6.99381
+longitude: -9.46369
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: ""
-phone: ""
-opening_hours: ""
+phone: "0880918683"
+opening_hours: Mo-Sa 08:00-18:00
 website: ""
