--- a/data/cities/gbarnga/ma-korpo-business-center-2.yml
+++ b/data/cities/gbarnga/ma-korpo-business-center-2.yml
@@ -1,11 +1,11 @@
-id: 5034311590
+id: 5034386168
 type: node
-latitude: 7.00268
-longitude: -9.4611
+latitude: 6.99928
+longitude: -9.47323
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: ""
-phone: ""
-opening_hours: ""
+phone: "0886999415"
+opening_hours: Mo-Sa 09:00-17:00
 website: ""
