--- a/data/cities/gbarnga/tea-shop-2.yml
+++ b/data/cities/gbarnga/tea-shop-2.yml
@@ -1,11 +1,11 @@
-id: 5041949416
+id: 5034386164
 type: node
-latitude: 6.99705
-longitude: -9.47212
+latitude: 6.9993
+longitude: -9.47287
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: ""
-phone: "0886414235"
+phone: ""
 opening_hours: ""
 website: ""
