update content and data

--- a/data/cities/ganta/histine-flomo-charging-booth-2.yml
+++ b/data/cities/ganta/histine-flomo-charging-booth-2.yml
@@ -1,9 +1,9 @@
-id: 4540042907
+id: 5029045557
 type: node
-latitude: 8.45562
-longitude: -9.5869
+latitude: 7.23138
+longitude: -8.99994
 postcode: ""
-city: Diomandou
+city: Ganta
 street: ""
 housenumber: ""
 phone: ""
