--- a/data/cities/zwedru/savic-business-center.yml
+++ b/data/cities/zwedru/savic-business-center.yml
@@ -1,11 +1,11 @@
-id: 4847872312
+id: 4846195539
 type: node
-latitude: 6.06873
-longitude: -8.13005
+latitude: 6.06624
+longitude: -8.13391
 postcode: ""
 city: Zwedru
-street: Dehsuah Street
+street: Doe Street
 housenumber: ""
-phone: "0886217575"
-opening_hours: Mo-Sa 08:00-18:00
+phone: "0880667938"
+opening_hours: Mo-Sa 09:00-17:00
 website: ""
