--- a/data/cities/gbarnga/blacksmith-shop.yml
+++ b/data/cities/gbarnga/blacksmith-shop.yml
@@ -1,11 +1,11 @@
-id: 5036948091
+id: 5056789740
 type: node
-latitude: 7.05043
-longitude: -9.43515
+latitude: 6.99547
+longitude: -9.45045
 postcode: ""
 city: Gbarnga
 street: ""
 housenumber: ""
-phone: ""
-opening_hours: ""
+phone: "0777371774"
+opening_hours: Mo-Sa 08:00-18:00
 website: ""
