update content and data

--- a/data/cities/zwedru/divine-hair-beauty-salon.yml
+++ b/data/cities/zwedru/divine-hair-beauty-salon.yml
@@ -1,11 +1,11 @@
-id: 5024769150
+id: 487985535
 type: node
-latitude: 7.20386
-longitude: -8.97414
+latitude: 6.06792
+longitude: -8.13253
 postcode: ""
-city: Ganta
+city: Zwedru
 street: ""
 housenumber: ""
-phone: ""
+phone: "0880259300"
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
