--- a/data/cities/ganta/charging-booth.yml
+++ b/data/cities/ganta/charging-booth.yml
@@ -1,11 +1,11 @@
-id: 5093266336
+id: 5025403890
 type: node
-latitude: 7.22981
-longitude: -8.98959
+latitude: 7.22628
+longitude: -8.99856
 postcode: ""
 city: Ganta
-street: ""
+street: Paye Goblee Street
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 08:00-18:00
+opening_hours: 24/7
 website: ""
