update content and data

--- a/data/cities/monrovia/sister-mamie-business-center-2.yml
+++ b/data/cities/monrovia/sister-mamie-business-center-2.yml
@@ -1,10 +1,10 @@
-id: 7212534447
+id: 7205802784
 type: node
-latitude: 6.37401
-longitude: -10.78728
+latitude: 6.374
+longitude: -10.78729
 postcode: ""
 city: Monrovia
-street: UN Drive
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
