--- a/data/cities/ganta/charging-booth-2.yml
+++ b/data/cities/ganta/charging-booth-2.yml
@@ -1,11 +1,11 @@
-id: 5098557767
+id: 5029043184
 type: node
-latitude: 7.22824
-longitude: -9.0019
+latitude: 7.23286
+longitude: -9.00282
 postcode: ""
 city: Ganta
 street: ""
 housenumber: ""
 phone: ""
-opening_hours: 24/7
+opening_hours: ""
 website: ""
