--- a/data/cities/ganta/charging-booth-5.yml
+++ b/data/cities/ganta/charging-booth-5.yml
@@ -1,10 +1,10 @@
-id: 7212534561
+id: 5024769150
 type: node
-latitude: 6.37398
-longitude: -10.78732
+latitude: 7.20386
+longitude: -8.97414
 postcode: ""
-city: Monrovia
-street: UN Drive
+city: Ganta
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
