--- a/data/cities/monrovia/tenneh-business-center-2.yml
+++ b/data/cities/monrovia/tenneh-business-center-2.yml
@@ -1,10 +1,10 @@
-id: 7212534548
+id: 7205802798
 type: node
-latitude: 6.374
+latitude: 6.37395
 longitude: -10.78731
 postcode: ""
 city: Monrovia
-street: UN Drive
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
