update content and data

--- a/data/cities/ganta/with-god-all-things-are-possible-2.yml
+++ b/data/cities/ganta/with-god-all-things-are-possible-2.yml
@@ -1,10 +1,10 @@
-id: 7205802019
+id: 5011613374
 type: node
-latitude: 6.37412
-longitude: -10.78682
+latitude: 7.23353
+longitude: -8.98737
 postcode: ""
-city: Monrovia
-street: UN Drive
+city: Ganta
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
