--- a/data/cities/monrovia/d-moon-mobile-business-center-un-drive.yml
+++ b/data/cities/monrovia/d-moon-mobile-business-center-un-drive.yml
@@ -1,10 +1,10 @@
-id: 7205802784
+id: 7212534499
 type: node
-latitude: 6.374
+latitude: 6.37402
 longitude: -10.78729
 postcode: ""
 city: Monrovia
-street: ""
+street: UN Drive
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
