--- a/data/cities/monrovia/tenneh-business-center.yml
+++ b/data/cities/monrovia/tenneh-business-center.yml
@@ -1,10 +1,10 @@
-id: 7212534452
+id: 7205802798
 type: node
-latitude: 6.3776
-longitude: -10.78461
+latitude: 6.37395
+longitude: -10.78731
 postcode: ""
 city: Monrovia
-street: UN Drive
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
